<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_toolbar_height"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/search_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/search_title_text_size"
        app:layout_constraintEnd_toStartOf="@id/filterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/screen_horizontal_margin" />

    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="@dimen/icon_touch_target"
        android:layout_height="@dimen/icon_touch_target"
        android:layout_marginEnd="@dimen/icon_button_edge_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/filter_description"
        android:padding="@dimen/icon_inner_padding"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/searchTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchTitle"
        app:tint="@color/text_primary" />

    <FrameLayout
        android:id="@+id/searchField"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_field_height"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/search_field_top_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:background="@drawable/background_search_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchTitle">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/search_field_horizontal_padding"
            android:paddingTop="0dp"
            android:paddingEnd="@dimen/search_field_action_space"
            android:paddingBottom="0dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/search_hint"
            android:textSize="@dimen/search_field_text_size" />

        <ImageButton
            android:id="@+id/searchActionButton"
            android:layout_width="@dimen/icon_touch_target"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/search_action_end_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search_action_description"
            android:padding="@dimen/icon_inner_padding"
            android:src="@drawable/ic_search"
            app:tint="@color/search_icon" />

    </FrameLayout>

    <ImageView
        android:id="@+id/initialIllustration"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_initial_illustration_height"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/search_initial_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/searchField"
        app:layout_constraintStart_toStartOf="@id/searchField"
        app:layout_constraintTop_toBottomOf="@id/searchField"
        app:layout_constraintVertical_bias="0.5125" />

</androidx.constraintlayout.widget.ConstraintLayout>
